--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_STRING="mongodb+srv://vetgoteam:EtzepartiVetGo-2025!@vetgo.b4ygxz8.mongodb.net/VetGo"
+CONNECTION_STRING="mongodb+srv://admin:admin@cluster0.nqo8tbf.mongodb.net/VetGo"
 CLOUDINARY_URL="cloudinary://849895466571174:XKFownJc1oQnFYDVAQ_seI8OUjM@dtshx17ha"
 
