--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CONNECTION_STRING="mongodb+srv://admin:admin@cluster0.nqo8tbf.mongodb.net/VetGo"
-CLOUDINARY_URL="cloudinary://849895466571174:XKFownJc1oQnFYDVAQ_seI8OUjM@dtshx17ha"
+# CLOUDINARY_URL="cloudinary://849895466571174:XKFownJc1oQnFYDVAQ_seI8OUjM@dtshx17ha"
+CLOUDINARY_URL="cloudinary://432191132862325:PxMPfqr5ARN8fsPSfQhxQTiWP7k@di1qs9sw5"
 
